# Rust_Actuarial_Finance

./: README.md  package-lock.json  package.json
lib/: ExoticOptions.js  apr.js  benchmarks.js  fincal.js  index.js  models.js  originals.js
native/: Cargo.toml
native/src/: lib.rs
