[package]
name = "actu-fin"
version = "0.1.0"
authors = ["isengupt <ishan6060@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "actu_fin"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
statrs = "0.13.0"
rand = "0.7.3"
rayon = "1.0.3"
